--- a/server.cfg
+++ b/server.cfg
@@ -22,6 +22,9 @@ set mysql_connection_string "{{dbConnectionString}}"
 set gamename rdr3
 set sv_enforceGameBuild 1436
 
+# QRCore UseTarget
+setr UseTarget false
+
 # These resources will start by default.
 ensure mapmanager
 ensure chat
