add global variable to straslate

--- a/server.cfg
+++ b/server.cfg
@@ -22,7 +22,10 @@ set mysql_connection_string "{{dbConnectionString}}"
 set gamename rdr3
 set sv_enforceGameBuild 1436
 
-# QRCore UseTarget
+# QBCoreRedm locale config
+setr qb_locale "es"
+
+# QRCoreRedm UseTarget
 setr UseTarget false
 
 # These resources will start by default.
