change to english

--- a/server.cfg
+++ b/server.cfg
@@ -23,7 +23,7 @@ set gamename rdr3
 set sv_enforceGameBuild 1436
 
 # QBCoreRedm locale config
-setr qb_locale "es"
+setr qb_locale "en"
 
 # QRCoreRedm UseTarget
 setr UseTarget false
