--- a/server.cfg
+++ b/server.cfg
@@ -1,6 +1,6 @@
-#   ____  ____      ______               
-#  / __ \|  _ \   /  _____|              
-# | |  | | |_) |  |  |     ___   _ __ ___ 
+#   ____  ____      ______
+#  / __ \|  _ \   /  _____|
+# | |  | | |_) |  |  |     ___   _ __ ___
 # | |  | |  __ /  |  |    / _ \ | '__/ _ \
 # | |__| | |  \ \ \  |___| (_)  | | |  __/
 #  \___\_\_|   \_\ \______\___/ |_|  \___|
@@ -16,7 +16,7 @@ sv_licenseKey "{{svLicense}}"
 sv_hostname "{{serverName}} built with {{recipeName}} by {{recipeAuthor}}!"
 sets sv_projectName "[{{recipeName}}] {{serverName}}"
 sets sv_projectDesc "{{recipeDescription}}"
-sets locale "en-US" 
+sets locale "en-US"
 load_server_icon myLogo.png
 set mysql_connection_string "{{dbConnectionString}}"
 set gamename rdr3
@@ -24,6 +24,7 @@ set sv_enforceGameBuild 1491
 
 # QBCoreRedm locale config
 setr qb_locale "en"
+setr ox:locale en
 
 # QRCoreRedm UseTarget
 setr UseTarget false
@@ -37,7 +38,7 @@ ensure basic-gamemode
 ensure hardcap
 
 # qr & Extra stuff
-
+ensure ox_lib
 ensure qr-core
 ensure oxmysql
 ensure [standalone]
