--- a/server.cfg
+++ b/server.cfg
@@ -22,8 +22,8 @@ set mysql_connection_string "{{dbConnectionString}}"
 set gamename rdr3
 set sv_enforceGameBuild 1491
 
-# QBCoreRedm locale config
-setr qb_locale "en"
+# QRCoreRedm locale config
+setr qr_locale "en"
 
 # QRCoreRedm UseTarget
 setr UseTarget false
