--- a/server.cfg
+++ b/server.cfg
@@ -37,9 +37,9 @@ ensure basic-gamemode
 ensure hardcap
 
 # qr & Extra stuff
-
-ensure qr-core
 ensure oxmysql
+# ensure ox_lib https://github.com/overextended/ox_lib/releases/tag/v3.6.1
+ensure qr-core
 ensure [standalone]
 ensure [qr]
 
