--- a/server.cfg
+++ b/server.cfg
@@ -35,10 +35,8 @@ ensure spawnmanager
 ensure sessionmanager-rdr3
 ensure basic-gamemode
 ensure hardcap
-
+ensure [ox]
 # qr & Extra stuff
-ensure oxmysql
-# ensure ox_lib https://github.com/overextended/ox_lib/releases/tag/v3.6.1
 ensure qr-core
 ensure [standalone]
 ensure [qr]
