--- a/qrcore.yaml
+++ b/qrcore.yaml
@@ -50,11 +50,6 @@ tasks:
     dest: ./resources/[standalone]/connectqueue
     ref: main
     src: https://github.com/QRCore-RedM-Re/connectqueue
-
-  - action: download_github
-    dest: ./resources/[standalone]/qr_menu
-    ref: main
-    src: https://github.com/QRCore-RedM-Re/qr_menu
     
   - action: download_github
     dest: ./resources/[standalone]/progressbar
@@ -118,6 +113,11 @@ tasks:
     dest: ./resources/[qr]/qr-core
 
   - action: download_github
+    src: https://github.com/QRCore-RedM-Re/qr-consumables
+    ref: main
+    dest: ./resources/[qr]/qr-consumables
+
+  - action: download_github
     src: https://github.com/QRCore-RedM-Re/qr-doorlock
     ref: main
     dest: ./resources/[qr]/qr-doorlock
@@ -126,11 +126,6 @@ tasks:
     src: https://github.com/QRCore-RedM-Re/qr-hud
     ref: main
     dest: ./resources/[qr]/qr-hud
-    
-  - action: download_github
-    src: https://github.com/QRCore-RedM-Re/qr-input
-    ref: main
-    dest: ./resources/[qr]/qr-input
     
   - action: download_github
     src: https://github.com/QRCore-RedM-Re/qr-interiors
@@ -151,11 +146,11 @@ tasks:
     src: https://github.com/QRCore-RedM-Re/qr-management
     ref: main
     dest: ./resources/[qr]/qr-management
-    
+
   - action: download_github
-    src: https://github.com/QRCore-RedM-Re/qr-menu
+    src: https://github.com/QRCore-RedM-Re/qr_menu
     ref: main
-    dest: ./resources/[qr]/qr-menu
+    dest: ./resources/[qr]/qr_menu
 
   - action: download_github
     src: https://github.com/QRCore-RedM-Re/qr-multicharacter
