--- a/server.cfg
+++ b/server.cfg
@@ -36,6 +36,7 @@ ensure sessionmanager-rdr3
 ensure basic-gamemode
 ensure hardcap
 ensure [ox]
+ensure qr_menu
 # qr & Extra stuff
 ensure qr-core
 ensure [standalone]
