--- a/qrcore.yaml
+++ b/qrcore.yaml
@@ -81,6 +81,11 @@ tasks:
     ref: main
     src: https://github.com/QRCore-RedM-Re/mediccamp
 
+  - action: download_github
+    src: https://github.com/QRCore-RedM-Re/qr_menu
+    ref: main
+    dest: ./resources/[standalone]/qr_menu
+    
   # Download QRCore resources
   - action: download_github
     src: https://github.com/QRCore-RedM-Re/qr-adminmenu
@@ -146,11 +151,6 @@ tasks:
     src: https://github.com/QRCore-RedM-Re/qr-management
     ref: main
     dest: ./resources/[qr]/qr-management
-
-  - action: download_github
-    src: https://github.com/QRCore-RedM-Re/qr_menu
-    ref: main
-    dest: ./resources/[qr]/qr_menu
 
   - action: download_github
     src: https://github.com/QRCore-RedM-Re/qr-multicharacter
