--- a/server.cfg
+++ b/server.cfg
@@ -1,6 +1,6 @@
-#   ____  ____      ______               
-#  / __ \|  _ \   /  _____|              
-# | |  | | |_) |  |  |     ___   _ __ ___ 
+#   ____  ____      ______
+#  / __ \|  _ \   /  _____|
+# | |  | | |_) |  |  |     ___   _ __ ___
 # | |  | |  __ /  |  |    / _ \ | '__/ _ \
 # | |__| | |  \ \ \  |___| (_)  | | |  __/
 #  \___\_\_|   \_\ \______\___/ |_|  \___|
@@ -16,7 +16,7 @@ sv_licenseKey "{{svLicense}}"
 sv_hostname "{{serverName}} built with {{recipeName}} by {{recipeAuthor}}!"
 sets sv_projectName "[{{recipeName}}] {{serverName}}"
 sets sv_projectDesc "{{recipeDescription}}"
-sets locale "en-US" 
+sets locale "en-US"
 load_server_icon myLogo.png
 set mysql_connection_string "{{dbConnectionString}}"
 set gamename rdr3
@@ -36,23 +36,11 @@ ensure sessionmanager-rdr3
 ensure basic-gamemode
 ensure hardcap
 ensure [ox]
-# qr & Extra stuff
+
+# QR & Extra Stuff
 ensure qr-core
 ensure [standalone]
 ensure [qr]
 
-## Permissions ##
-
-# Resources
-
-add_ace resource.qr-core command allow # Allow qb-core to execute commands
-
-# Gods
-add_ace qrcore.god command allow # Allow all commands
-add_ace qrcore.god whitelisted allow # Allow access to server when closed
-
-# Inheritance
-add_principal qrcore.god group.admin # Allow gods access to the main admin group used to get all default permissions
-add_principal qrcore.admin qrcore.mod # Allow admins access to mod commands
-#add_principal identifier.{{principalMasterIdentifier}} qrcore.god <- doesn't exist yet, change the generated one below to qrcore.god
-{{addPrincipalsMaster}}
+# Permissions
+exec permissions.cfg
