--- a/qrcore.yaml
+++ b/qrcore.yaml
@@ -17,6 +17,10 @@ tasks:
     dest: ./server.cfg
 
   - action: move_path
+    src: ./tmp/QRCore/permissions.cfg
+    dest: ./permissions.cfg
+
+  - action: move_path
     src: ./tmp/QRCore/myLogo.png
     dest: ./myLogo.png
 
@@ -25,8 +29,8 @@ tasks:
   - action: query_database
     file: ./tmp/QRCore/qrcore.sql
 
-  
-  # Downloading Standalone Resources  
+
+  # Downloading Standalone Resources
   - action: download_github
     src: https://github.com/citizenfx/cfx-server-data
     subpath: resources
@@ -50,17 +54,17 @@ tasks:
     dest: ./resources/[standalone]/connectqueue
     ref: main
     src: https://github.com/QRCore-RedM-Re/connectqueue
-    
+
   - action: download_github
     dest: ./resources/[standalone]/progressbar
     ref: main
     src: https://github.com/QRCore-RedM-Re/progressbar
-    
+
   - action: download_github
     dest: ./resources/[standalone]/safecracker
     ref: main
     src: https://github.com/QRCore-RedM-Re/safecracker
-    
+
   - action: download_github
     dest: ./resources/[standalone]/PolyZone
     ref: main
@@ -72,11 +76,6 @@ tasks:
     src: https://github.com/AvarianKnight/pma-voice
 
   - action: download_github
-    dest: ./resources/[standalone]/menuv
-    ref: main
-    src: https://github.com/QRCore-RedM-Re/menuv
-
-  - action: download_github
     dest: ./resources/[standalone]/mediccamp
     ref: main
     src: https://github.com/QRCore-RedM-Re/mediccamp
@@ -85,18 +84,18 @@ tasks:
     src: https://github.com/QRCore-RedM-Re/qr_menu
     ref: main
     dest: ./resources/[standalone]/qr_menu
-    
+
   # Download QRCore resources
   - action: download_github
-    src: https://github.com/QRCore-RedM-Re/qr-adminmenu
+    src: https://github.com/QRCore-RedM-Re/qr-admin
     ref: main
-    dest: ./resources/[qr]/qr-adminmenu
-    
+    dest: ./resources/[qr]/qr-admin
+
   - action: download_github
     src: https://github.com/QRCore-RedM-Re/qr-appearance
     ref: main
     dest: ./resources/[qr]/qr-appearance
-    
+
   - action: download_github
     src: https://github.com/QRCore-RedM-Re/qr-clothes
     ref: main
@@ -111,7 +110,7 @@ tasks:
     src: https://github.com/QRCore-RedM-Re/qr-banking
     ref: main
     dest: ./resources/[qr]/qr-banking
-    
+
   - action: download_github
     src: https://github.com/QRCore-RedM-Re/qr-core
     ref: main
@@ -131,22 +130,22 @@ tasks:
     src: https://github.com/QRCore-RedM-Re/qr-hud
     ref: main
     dest: ./resources/[qr]/qr-hud
-    
+
   - action: download_github
     src: https://github.com/QRCore-RedM-Re/qr-interiors
     ref: main
     dest: ./resources/[qr]/qr-interiors
-    
+
   - action: download_github
     src: https://github.com/QRCore-RedM-Re/qr-inventory
     ref: main
     dest: ./resources/[qr]/qr-inventory
-    
+
   - action: download_github
     src: https://github.com/QRCore-RedM-Re/qr-lockpick
     ref: main
     dest: ./resources/[qr]/qr-lockpick
-    
+
   - action: download_github
     src: https://github.com/QRCore-RedM-Re/qr-management
     ref: main
@@ -171,7 +170,7 @@ tasks:
     src: https://github.com/QRCore-RedM-Re/qr-shops
     ref: main
     dest: ./resources/[qr]/qr-shops
-  
+
   - action: download_github
     src: https://github.com/QRCore-RedM-Re/qr-smallresources
     ref: main
@@ -181,7 +180,7 @@ tasks:
     src: https://github.com/QRCore-RedM-Re/qr-spawn
     ref: main
     dest: ./resources/[qr]/qr-spawn
-    
+
   - action: download_github
     src: https://github.com/QRCore-RedM-Re/qr-stables
     ref: main
@@ -201,7 +200,7 @@ tasks:
     src: https://github.com/QRCore-RedM-Re/qr-target
     ref: main
     dest: ./resources/[qr]/qr-target
-  
+
   # Clean up
   - action: remove_path
     path: ./tmp
